static/css/style.css
/* ---------- navigation bar ---------- */

.navbar {
	margin-bottom: 0px;
}

/* ---------- formatting ---------- */

.page-stuff {
	overflow: hidden;
	width:100%;
}
.lean-right {
    text-align:right;
}
.lean-left {
    text-align:left;
}
.lean-center {
    text-align:center;
}

.foot {
	display: flex;
}

@media only screen and (max-width: 574px) {
	.lg-only, .md-only {
		display: none;
	}
}
@media only screen and (min-width: 768px) {
	.sm-only, .lg-only {
		display: none;
	}
}
@media only screen and (min-width: 992px) {
	.sm-only, .md-only {
		display: none;
	}
}

body {
	width: 100%;
	margin: 0px;
	padding: 0px;
	overflow-x: hidden;
}

  

/* ---------- text ---------- */

h1 {
	font-family: Suez One;
	font-style: normal;
	font-weight: normal;
	font-size: 36px;
	line-height: 47px;

	color: #000000;
    padding-left: 10px;
    padding-right: 10px;
}
h2 {
	font-family: Suez One;
	font-style: normal;
	font-weight: normal;
	font-size: 30px;
	line-height: 37px;

	color: #000000;

    padding-left: 10px;
    padding-right: 10px;
}
h3 {
	font-family: Poppins;
	font-style: normal;
	font-weight: bold;
	font-size: 22px;
	line-height: 27px;
    padding-left: 10px;
    padding-right: 10px;
}
p, ol {
	font-family: Poppins;
	font-style: normal;
	font-weight: normal;
	font-size: 18px;
	line-height: 36px;

	color: #000000;

    padding-left: 10px;
    padding-right: 10px;
}
ol {
    padding-left: 30px;
    padding-right: 10px;
}
br.responsive {
    display: none; 
	/* Hide BR tag for wider screens */
  }
label {
	font-family: Poppins;
	font-style: normal;
	font-weight: normal;
	font-size: 12px;
	line-height: 18px;

	color: #000000;
}
.white-out{
	color: #ffffff;
}
.white-out h1 {
	color: #ffffff;
}
.white-out p {
	color: #ffffff;
}

@media only screen and (min-width: 992px) {
.text-padding {
	padding: 55px;
}
}
@media only screen and (min-width: 768px) and (max-width: 991px){
	.text-padding {
		padding: 30px;
	}
	}

@media only screen and (min-width: 640px) and (max-width: 767px) {
	.text-padding {
		padding: 15px;
	}
	}

/* --------- image ---------- */
.fill {
    display: flex;
    justify-content:center;
	padding-right: 0px;
	padding-left: 0px;
}

.leaf {
	position: absolute;
	width: 100%;
	height: auto;
	z-index: -1;
	padding: 0px;
}

.leaf-large {
	position: absolute;
	width: 150%;
	height: auto;
	z-index: -1;
	padding: 0px;
}

/* --------- spacing ---------- */

@media only screen and (min-width: 992px) {

	.top-baby {
		padding-top: 16px;
	}
	.bottom-baby {
		padding-bottom:16px;
	}
	.top-mama {
		padding-top: 32px;
	}
	.bottom-mama {
		padding-bottom:32px;
	}
	.top-papa {
		padding-top: 64px;
	}
	.bottom-papa {
		padding-bottom:64px;
	}
	.top-grand {
		padding-top: 96px;
	}
	.bottom-grand {
		padding-bottom:96px;
	}
	.mtop-baby {
		margin-top: 16px;
	}
	.mbottom-baby {
		margin-bottom:16px;
	}
	.mtop-mama {
		margin-top: 32px;
	}
	.mbottom-mama {
		margin-bottom:32px;
	}
	.mtop-papa {
		margin-top: 64px;
	}
	.mbottom-papa {
		margin-bottom:64px;
	}
	.mtop-grand {
		margin-top: 96px;
	}
	.mbottom-grand {
		padding-bottom:96px;
	}
	.mr-auto {
		margin: auto !important;
		justify-content: space-between;
	}
}
@media only screen and (min-width: 768px) and (max-width: 991px) {

	.top-baby {
		padding-top: 8px;
	}
	.bottom-baby {
		padding-bottom:8px;
	}
	.top-mama {
		padding-top: 16px;
	}
	.bottom-mama {
		padding-bottom:16px;
	}
	.top-papa {
		padding-top: 32px;
	}
	.bottom-papa {
		padding-bottom:32px;
	}
	.top-grand {
		padding-top: 64px;
	}
	.bottom-grand {
		padding-bottom:64px;
	}
	.mtop-baby {
		margin-top: 8px;
	}
	.mbottom-baby {
		margin-bottom:8px;
	}
	.mtop-mama {
		margin-top: 16px;
	}
	.mbottom-mama {
		margin-bottom:16px;
	}
	.mtop-papa {
		margin-top: 32px;
	}
	.mbottom-papa {
		margin-bottom:32px;
	}
	.mtop-grand {
		margin-top: 64px;
	}
	.mbottom-grand {
		padding-bottom:64px;
	}
	.mr-auto {
		margin: auto !important;
		justify-content: space-between;
	}
}

@media only screen and (max-width: 768px) {

	.top-baby {
		padding-top: 8px;
	}
	.bottom-baby {
		padding-bottom:8px;
	}
	.top-mama {
		padding-top: 16px;
	}
	.bottom-mama {
		padding-bottom:20px;
	}
	.top-papa {
		padding-top: 32px;
	}
	.bottom-papa {
		padding-bottom:32px;
	}
	.top-grand {
		padding-top: 64px;
	}
	.bottom-grand {
		padding-bottom:64px;
	}
	.mtop-baby {
		margin-top: 8px;
	}
	.mbottom-baby {
		margin-bottom:8px;
	}
	.mtop-mama {
		margin-top: 16px;
	}
	.mbottom-mama {
		margin-bottom:16px;
	}
	.mtop-papa {
		margin-top: 32px;
	}
	.mbottom-papa {
		margin-bottom:32px;
	}
	.mtop-grand {
		margin-top: 64px;
	}
	.mbottom-grand {
		padding-bottom:64px;
	}
	.mr-auto {
		margin: auto !important;
		justify-content: space-between;
	}
}

/* --------- buttons ----------- */

.yellowButton-sm {
	background-color: #f5d015;
	border: none;
	color: w;
	padding: 10px 20px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	margin: 4px 4px;
	cursor: pointer;
	border-radius: 70px;
	box-shadow: 0px 5px 0px #e2ab19;
	color: black;
}
.yellowButton-md {
	width: 40%;
	height: 45px;
	left: 798.29px;
	top: 435px;
	font-family: Poppins;
	font-style: normal;
	font-weight: bold;
	font-color: black;
	background-color: #f5d015;
	border: none;
	color: w;
	padding: 10px 20px;
	padding-top: 5px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	margin: 5px 5px;
	cursor: pointer;
	border-radius: 70px;
	box-shadow: 0px 5px 0px #e2ab19;
	color: black;
    /* margin-bottom: 35px;
    margin-top: 20px; */
}
.yellowButton-lg {
	width: 95%;
	height: 45px;
	left: 798.29px;
	top: 435px;
	font-family: Poppins;
	font-style: normal;
	font-weight: bold;
	font-color: black;
	background-color: #f5d015;
	border: none;
	color: w;
	padding: 10px 20px;
	padding-top: 5px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	margin: 5px 5px;
	cursor: pointer;
	border-radius: 70px;
	box-shadow: 0px 5px 0px #e2ab19;
	color: black;
}
.blueButton-lg {
	width: 95%;
	height: 45px;
	left: 798.29px;
	top: 435px;
	font-family: Poppins;
	font-style: normal;
	font-weight: bold;
	background-color: #6499d0;
	border: none;
	color: w;
	padding: 10px 20px;
	padding-top: 5px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	margin: 15px 4px;
	cursor: pointer;
	border-radius: 5px;
	box-shadow: 0px 5px 0px #2c659f;
	color: black;
}
.blueButton-md {
	width: 40%;
	height: 45px;
	left: 798.29px;
	top: 435px;
	font-family: Poppins;
	font-style: normal;
	font-weight: bold;
	background-color: #6499d0;
	border: none;
	color: w;
	padding: 10px 20px;
	padding-top: 5px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	margin: 15px 4px;
	cursor: pointer;
	border-radius: 5px;
	box-shadow: 0px 5px 0px #2c659f;
	color: black;
}
.blueButton-sm {
	width: 20%;
	height: 45px;
	left: 798.29px;
	top: 435px;
	font-family: Poppins;
	font-style: normal;
	font-weight: bold;
	background-color: #6499d0;
	border: none;
	color: w;
	padding: 10px 20px;
	padding-top: 5px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	margin: 15px 4px;
	cursor: pointer;
	border-radius: 5px;
	box-shadow: 0px 5px 0px #2c659f;
	color: black;
}
/* header section */

@media only screen and (min-width: 992px) {
	.header-cont {
		height:600px;
	}
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
	.header-cont {
		height:550px;
	}
}

@media only screen and (min-width: 575px) and (max-width: 767px) {
	.header-cont {
		height:400px;
	}
}

@media only screen and (max-width: 767px) {
	.header-text {
		justify-content: center;
	}
}

.header-image {
	width:100%;
	object-fit:cover;
	overflow:hidden
}

.header-section{
    background: #5E719B;
}

.vert-align {
	align-self: center;
}

.course-box {
    background: #675e9b;
    border-radius: 5px;
    color: #ffffff;
}

.course-text {
    padding: 15px;
}

.course-img {
    padding: 25px;
}


/* .sectionHeader {
	text-align: center;
	background: #5e719b;
	border-radius: 5px;
	color: #ffffff;
}


*/

@media only screen and (max-width: 768px) {

	.leaf1, .leaf2, .leaf3, .leaf4, .leaf5, .leaf6, .leaf7, .leaf8 {
		display: none;
	}

	body {
		background-image: url("https://i.ibb.co/S60Kg7y/Untitled-design-4.png");
		background-repeat: repeat-y;
		background-size:contain;
	}

	}

